Bug 401434: Global History ::RowMatches creates UTF16 strings with the wrong length. r=ajschult, sr=neil